--- a/package.json
+++ b/package.json
@@ -14,5 +14,16 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@tiptap/core": "^3.20.0",
+        "@tiptap/extension-code-block-lowlight": "^3.20.0",
+        "@tiptap/extension-image": "^3.20.0",
+        "@tiptap/extension-link": "^3.20.0",
+        "@tiptap/extension-placeholder": "^3.20.0",
+        "@tiptap/starter-kit": "^3.20.0",
+        "highlight.js": "^11.11.1",
+        "highlighter.js": "^1.0.0",
+        "lowlight": "^3.3.0"
     }
 }
