feat: implement post-published notification system with daily email limit and subscriber notifications

--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,8 @@ R2_SSL_CERT=
 VITE_APP_NAME="${APP_NAME}"
 
 ADMIN_OTP_EMAIL=
+
+# ─── Blog Notifications ───────────────────────────────────────────────────────
+# Maximum number of post-published notification emails to send per calendar day.
+# Tune this to stay within your SMTP provider's daily sending quota.
+DAILY_EMAIL_LIMIT=300
