--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "concurrently --kill-others \"php artisan serve\" \"vite\""
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.19",
